# libzeug

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README.md  configure  libzeug-config.cmake  libzeug.sublime-project  libzeug.sublime-workspace
cmake/: Custom.cmake  (+7 more)
examples/properties/: CMakeLists.txt  SomeObject.cpp  main.cpp
examples/properties/data/: .gitignore  group.ini
examples/properties/include/: DynamicObject.h  SomeObject.h
examples/properties/source/: DynamicObject.cpp  SomeObject.cpp  main.cpp
examples/propertygui/: CMakeLists.txt
examples/propertygui/source/: main.cpp
source/: CMakeLists.txt  libzeug-version.h.in
source/examples/: CMakeLists.txt
source/examples/logging/: CMakeLists.txt  main.cpp
source/examples/properties/: CMakeLists.txt  MyObject.cpp  MyObject.h  PropertyExtension.h  SomeObject.cpp  SomeObject.h  main.cpp
source/examples/property_editors/: CMakeLists.txt  main.cpp
source/examples/propertyeditors/: CMakeLists.txt  main.cpp
source/examples/propertygui/: CMakeLists.txt  PropertyExtension.h  Switch.h  main.cpp
source/examples/script/: CMakeLists.txt  main.cpp
source/examples/type/: CMakeLists.txt  main.cpp
source/examples/variant/: CMakeLists.txt  main.cpp
source/examples/widget/: CMakeLists.txt  main.cpp
source/iozeug/: CMakeLists.txt  readfile.cpp
source/iozeug/source/: FilePath.cpp  SystemInfo.cpp  directorytraversal.cpp  filename.cpp  readfile.cpp
source/loggingzeug/: CMakeLists.txt
source/loggingzeug/source/: ConsoleLogHandler.cpp  ConsoleLogger.cpp  FileLogHandler.cpp  LogMessage.cpp  LogMessageBuilder.cpp  baselogging.cpp  formatString.cpp  logging.cpp
source/propertyguizeug/: BoolEditor.cpp  BoolEditor.h  BoolMatrixEditor.cpp  BoolMatrixEditor.h  CMakeLists.txt  ChoiceEditor.cpp  ChoiceEditor.h  ColorButton.cpp  ColorButton.h  ColorEditor.cpp  ColorEditor.h  DoubleEditor.cpp  DoubleEditor.h  DoubleMatrixEditor.cpp  DoubleMatrixEditor.h  FilePathEditor.cpp  FilePathEditor.h  IntMatrixEditor.cpp  IntMatrixEditor.h  IntSetEditor.cpp  IntSetEditor.h  IntegerEditor.cpp  IntegerEditor.h  MatrixEditor.cpp  MatrixEditor.h  PropertyBrowser.cpp  PropertyDelegate.cpp  PropertyEditor.cpp  PropertyEditor.h  PropertyEditorFactory.cpp  PropertyItemModel.cpp  PropertyModel.cpp  PropertyPainter.cpp  SetEditor.cpp  SetEditor.h  StringEditor.cpp  StringEditor.h  TransparencyBackgroundBrush.hpp  WidgetBuilder.cpp
source/propertyguizeug/source/: AbstractPropertyEditorPlugin.cpp  BoolEditor.cpp  BoolEditor.h  BoolMatrixEditor.cpp  BoolMatrixEditor.h  ChoiceEditor.cpp  ChoiceEditor.h  ChoicesModel.cpp  ColorButton.cpp  ColorButton.h  ColorEditor.cpp  ColorEditor.h  DPIScalingHelper.cpp  DoubleEditor.cpp  DoubleEditor.h  DoubleMatrixEditor.cpp  DoubleMatrixEditor.h  EnumEditor.cpp  EnumEditor.h  FilePathEditor.cpp  FilePathEditor.h  FloatingPointEditor.cpp  IntMatrixEditor.cpp  IntMatrixEditor.h  IntSetEditor.cpp  IntSetEditor.h  IntegerEditor.cpp  IntegerEditor.h  LongLongSpinBox.cpp  MatrixEditor.cpp  MatrixEditor.h  PropertyBrowser.cpp  PropertyDelegate.cpp  PropertyEditor.cpp  PropertyEditor.h  PropertyEditorFactory.cpp  PropertyItem.cpp  PropertyItem.h  PropertyModel.cpp  PropertyPainter.cpp  (+15 more)
source/propertyzeug/: AbstractAttribute.cpp  AbstractProperty.cpp  AbstractPropertyVisitor.cpp  Announcer.cpp  CMakeLists.txt  Color.cpp  DynObject.cpp  FilePath.cpp  FilePathProperty.cpp  PropertyDeserializer.cpp  PropertyGroup.cpp  PropertySerializer.cpp  StringAttribute.cpp  StringProperty.cpp  ValueProperty.cpp  ValuePropertyBase.cpp
source/propertyzeug/source/: AbstractProperty.cpp  Color.cpp  FilePath.cpp  FilePathProperty.cpp  PropertyDeserializer.cpp  PropertyGroup.cpp
source/reflectionzeug/: CMakeLists.txt
source/reflectionzeug/source/: AbstractBooleanInterface.cpp  AbstractCollection.cpp  AbstractColorInterface.cpp  AbstractEnumInterface.cpp  AbstractFloatingPointInterface.cpp  AbstractProperty.cpp  AbstractPropertyCollection.cpp  AbstractPropertyDeserializer.cpp  AbstractPropertyGroup.cpp  AbstractPropertySerializer.cpp  AbstractPropertyVisitor.cpp  AbstractSerializer.cpp  AbstractSignedIntegralInterface.cpp  AbstractStringInterface.cpp  AbstractUnsignedIntegralInterface.cpp  AbstractValue.cpp  AbstractValueProperty.cpp  AbstractVisitor.cpp  ArrayPropertyInterface.cpp  BoolProperty.cpp  Color.cpp  ColorProperty.cpp  ColorPropertyInterface.cpp  EnumPropertyInterface.cpp  FilePath.cpp  FilePathProperty.cpp  FloatingPointPropertyInterface.cpp  IniPropertyDeserializer.cpp  IniPropertySerializer.cpp  JsonFromVariantSerializer.cpp  JsonPropertyDeserializer.cpp  JsonPropertySerializer.cpp  JsonSerializationVisitor.cpp  JsonToVariantDeserializer.cpp  JsonVariantSerializer.cpp  Object.cpp  PropertyDeserializer.cpp  PropertyGroup.cpp  PropertySerializer.cpp  SetValuePropertyVisitor.cpp  (+10 more)
source/scriptzeug/: CMakeLists.txt  ScriptContext.cpp  ScriptEnvironment.cpp  Scriptable.cpp  TestClass.cpp  Value.cpp  Variant.cpp
source/scriptzeug/Backend/: AbstractScriptEnvironment.cpp
source/signalzeug/: AbstractSignal.cpp  CMakeLists.txt  Connection.cpp  ConnectionMap.cpp  ConnectionMap.h  ConnectionMap.hpp  ScopedConnection.cpp
source/stagezeug/: AbstractStage.cpp  CMakeLists.txt  Pipeline.cpp  StageData.cpp  StageInput.cpp  StageOutput.cpp
source/stringzeug/: CMakeLists.txt
source/tests/: CMakeLists.txt
source/threadingzeug/: CMakeLists.txt  parallelfor.cpp
source/treeimportzeug/: CMakeLists.txt  ChangesStrategy.cpp  CityGMLStrategy.cpp  MutableTree.cpp  MutableTree.h  RepositoryStrategy.cpp  SDStrategy.cpp  SoftwareSystemStrategy.cpp  TreeImport.cpp  TreeParserStrategy.cpp  TreeSqliteParser.cpp  TreeSqliteParserStrategy.cpp  TreeStrategy.cpp  TreeXmlParser.cpp  TreeXmlParserStrategy.cpp
source/treezeug/: Attribute.cpp  AttributeMap.cpp  CMakeLists.txt  LinearizedTree.cpp  MutableTree.cpp  Node.cpp  Tree.cpp  TreeData.cpp  TreeData.h
source/widgetzeug/: CMakeLists.txt
tree/: CMakeLists.txt
tree/include/: Attribute.h  LinearizedTree.h
tree/src/: Attribute.cpp  AttributeMap.cpp  LinearizedTree.cpp  Tree.cpp
(+882 files in other folders)
